--- a/index.html
+++ b/index.html
@@ -2000,7 +2000,29 @@ function hasil10()
 					
 					<div class="col-md-9">
 						<div id="whywhy">
-							
+<script language="javascript">
+function lengkung1()
+{
+	var jlh=0;
+	
+	if(document.getElementById("l1").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("l2").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("l3").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("l4").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("l5").checked==true){
+	jlh++;}
+	
+	return document.cheklengkung.skor.value=jlh;
+}
+</script>													
 <form name="cheklengkung" method="post">
 		<div>
 			<h3 id="soallengkung">Soal Latihan</h3>
