soal sisi datar (ruang)

--- a/index.html
+++ b/index.html
@@ -1913,6 +1913,7 @@ function hasil10()
 						  <li><a href="#duagaris">Kedudukan Dua Garis</a></li>
 						  <li><a href="#psudut">Pengertian Sudut</a></li>
 						  <li><a href="#jsudut">Jenis-Jenis Sudut</a></li>
+						  <li><a href="#soalsisidatar">Soal Latihan</a></li>
 						</ul>
 					  </div><!--/.well -->
 					  <a href="https://www.dropbox.com/s/bi71n9i4rcl468g/MTK.%20KLS%207%20BAB%207.%20BANGUN%20RUANG%20SISI%20DARTAR.pdf"><button class="punch">Download E-Book</button></a>
@@ -1959,6 +1960,38 @@ function hasil10()
 									<li class="dangerss">Sudut yang ukurannya 180<sup>o</sup> disebut <strong>sudut lurus</strong></li>
 								</ul>
 							</div>
+							
+<form name="cheklengkung" method="post">
+		<div>
+			<h3 id="soalsisidatar">Soal Latihan</h3>
+			<pre>
+			<h4>1. Perhatikan Soal Berikut :
+  <img src="img/datar1.jpg"> tentukan panjang DB ... ?
+	<input type="radio" name="satu"  value="1"    id="d1"      >  5 cm        </input>    <input type="radio" name="satu" > 7 cm </input>
+	<input type="radio" name="satu" value="b"                  >  6 cm        </input>    <input type="radio" name="satu" > 8 cm </input>		
+			<br>2. Perhatikan Gambar dibawah :
+  <img src="img/datar2.jpg"> tentukan panjang QR ... ?
+	<input type="radio" name="dua" value="a"  >  45 cm        </input> <input type="radio" name="dua" value="c" id="d2">  20 cm</input>
+	<input type="radio" name="dua" value="12" >  17 cm        </input> <input type="radio" name="dua" value="ff">  30 cm</input>			
+			<br>3. Perhatikan Gambar dibawah : 
+  <img src="img/datar3.jpg"> tentukan panjang DE ... ?
+	<input type="radio" name="tigaa" value="a"    > 17 cm      </input>   <input type="radio" name="tigaa" value="c"  > 19 cm </input>
+	<input type="radio" name="tigaa" id="d3"      > 18 cm      </input>   <input type="radio" name="tigaa" value="8"  > 20 cm </input>			 
+			<br>4. Perhatikan Gambar dibawah : 
+  <img src="img/datar4.jpg"> tentukan panjang DE ... ?
+    <input type="radio" name="tiga" value="a"   > 10 cm                     </input> <input type="radio" name="tiga" id="d4"   > 12 cm</input>
+    <input type="radio" name="tiga" value="ss"  > 11 cm                     </input> <input type="radio" name="tiga" value="8" > 13 cm</input>			
+			<br>5. Perhatikan Gambar dibawah : 
+  <img src="img/datar5.jpg"> tentukan panjang QS ... ?
+	<input type="radio" name="lima" value="a"  id="d5"  > 4,5 cm        </input>    <input type="radio" name="lima"           > 7 cm </input>
+	<input type="radio" name="lima" value="dd"          > 5   cm         </input>    <input type="radio" name="lima" value="d" > 7,5 cm</input>
+			</h4>
+			</pre>
+			<input type="button" onClick="sisi1()"  value="Check">  <input type="reset" value="reset">
+			Score : <input type="text" disabled name="skor" size="3" >
+		</div>
+	</form>
+
 						</div>
 						<div class="komen">
 							<hr class="featurette-divider garis">
