--- a/scrollspy.html
+++ b/scrollspy.html
@@ -24,7 +24,7 @@
 			</div>
 		</div>
 		
-        <article class="col-md-8" id="main-article">
+<article class="col-md-8" id="main-article">
 		<h1>Soal Latihan</h1>
 		<p>Setelah mempelajari setiap <strong>judul</strong> yang ada, Kita akan <em>latihan</em> sedikit untuk <em>mengukur kemampuan</em> yang kita peroleh dari kita mempelajari semua judul yang ada. <strong>"SEMANGAT KAMU PASTI BISA.. ;)"</strong></p>
 		<p></p>
@@ -32,39 +32,62 @@
 		<div class="back-shadow">
 		<form action="" method="get">
 			<div id="bla">
-				<p>Jika diamter suatu lingkarang 3,5m dan &pi; = 22/7, maka keliling lingkaran adalah...
-				<p><input type="radio" name="jawab" value="a" /> 11,5m</p>
-				<p><input type="radio" name="jawab" value="b" /> 11m</p>
-				<p><input type="radio" name="jawab" value="c" /> 10,5m</p>
-				<p><input type="radio" name="jawab" value="d" /> 7,5m</p>
+				<p>Jika diamter suatu lingkarang 14 m dan &pi; = 22/7, maka keliling lingkaran adalah...
+				<p><input type="radio" name="jawab1" value="a" /> 14 m</p>
+				<p><input type="radio" name="jawab1" value="b" /> 21 m</p>
+				<p><input type="radio" name="jawab1" value="c" id="j1"/> 44 m</p>
+				<p><input type="radio" name="jawab1" value="d" /> 75 m</p>
 			</div>
 			<div id="bla">
-				<p>Suatu persegi ABCD diketahui kelilingnya 64cm. Luasnya adalah...</p>
-				<p><input type="radio" name="jawab" value="a" /> 16 cm<sup>2</sup></p>
-				<p><input type="radio" name="jawab" value="b" /> 32 cm<sup>2</sup></p>
-				<p><input type="radio" name="jawab" value="c" /> 128 cm<sup>2</sup></p>
-				<p><input type="radio" name="jawab" value="d" /> 256 cm<sup>2</sup></p>
+				<p>Suatu persegi ABCD diketahui kelilingnya 64 cm. Luasnya adalah...</p>
+				<p><input type="radio" name="jawab2" value="a" /> 16  cm<sup>2</sup></p>
+				<p><input type="radio" name="jawab2" value="b" /> 32  cm<sup>2</sup></p>
+				<p><input type="radio" name="jawab2" value="c" id="j2" /> 64  cm<sup>2</sup></p>
+				<p><input type="radio" name="jawab2" value="d" /> 128 cm<sup>2</sup></p>
 			</div>
 			<div id="bla">
-				<p>Pada gambar di samping, panjang DE = 20 cm, DF = 14 cm dann EF = 12 cm. Panjang DG = ...</p>
-				<img class="gamb" src="img/segitiga.ico" alt="segitiga" />
+				<p>Pada gambar di bawah, tentukan panjang DB ... ?</p>
+				<img src="img/datar1.jpg"> 
 				<div class="inli">
-					<p><input type="radio" name="jawab" value="a" /> 1,5 cm</p>
-					<p><input type="radio" name="jawab" value="b" /> 2,5 cm</p>
-					<p><input type="radio" name="jawab" value="c" /> 8,7 cm</p>
-					<p><input type="radio" name="jawab" value="d" /> 11,3 cm</p>
+					<p><input type="radio" name="jawab3" value="a" id="j3"/> 5 cm</p>
+					<p><input type="radio" name="jawab3" value="b" /> 6 cm</p>
+					<p><input type="radio" name="jawab3" value="c" /> 7 cm</p>
+					<p><input type="radio" name="jawab3" value="d" /> 8 cm</p>
 				</div>
 			</div>
 		</form>
 		</div>
+		
 		<h2>Bagian Kedua</h2>
 		<div class="back-shadow">
-			<p class="padd">lorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadj</p>
+		<form action="" method="get">
+			<div id="bla">
+				<p>tentukan luas segitiga ABC dik, a=4cm, c=5cm dimana C merupakan sisi miring = ... cm<sup>2</sup>
+				<p><input type="radio" name="jawab4" value="a" /> 5 m</p>
+				<p><input type="radio" name="jawab4" value="b" id="j4"/> 6 m</p>
+				<p><input type="radio" name="jawab4" value="c" /> 7 m</p>
+				<p><input type="radio" name="jawab4" value="d" /> 8 m</p>
+			</div>
+			<div id="bla">
+				<p>dua buah dadu dilempar secara bersamaan, maka tentukan peluang munculnya mata dadu yg berjumlah 10 .</p>
+				<p><input type="radio" name="jawab5" value="a" /> 1/13</p>
+				<p><input type="radio" name="jawab5" value="b" id="j5"/> 1/12</p>
+				<p><input type="radio" name="jawab5" value="c" /> 1</p>
+				<p><input type="radio" name="jawab5" value="d" /> 1/2</sup></p>
+			</div>
+			<div id="bla">
+				<p>Lukisan berbentuk persegi panjang berukuran 40 cm x 50 cm dipasang pada bingkai berbentuk persegi dengan panjang sisi 60 cm!	Tentukan luas daerah yang tidak tertutup gambar .... cm<sup>2</sup></p>
+				<div class="inli">
+					<p><input type="radio" name="jawab6" value="a" /> 1300 cm<sup>2</sup></p>
+					<p><input type="radio" name="jawab6" value="b" /> 1400 cm<sup>2</sup></p>
+					<p><input type="radio" name="jawab6" value="c" /> 1500 cm<sup>2</sup></p>
+					<p><input type="radio" name="jawab6" value="d" id="j6"/> 1600 cm<sup>2</sup></p>
+				</div>
+			</div>
+		</form>
 		</div>
-		<h2>Bagian Ketiga</h2>
-		<div class="back-shadow">
-			<p class="padd">lorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadjlorem ipsum dolor sit ametkasjdfka kaj kjfkadj</p>
-		</div>
+		
+		
 
 </article>
       </div><!--/row-->
