--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@ function hasil2()
 	<input type="radio" name="dua" value="a"         >13      </input> <input type="radio" name="dua" value="c">10</input>
 	<input type="radio" name="dua" value="12" id="12">12      </input> <input type="radio" name="dua">22</input>
 			
-			<br>3. tentukan luas segitiga ABC dik, a=4cm, c=5cm dimana C merupakan sisi miring = ... cm
+			<br>3. tentukan luas segitiga ABC dik, a=4cm, c=5cm dimana C merupakan sisi miring = ... cm<sup>2</sup>
 	<input type="radio" name="tiga" value="a">5      </input> <input type="radio" name="tiga" value="c">7</input>
 	<input type="radio" name="tiga" id="6"   >6      </input> <input type="radio" name="tiga" value="8">8</input>
 			
@@ -985,7 +985,7 @@ function hasil8()
 	<input type="radio" name="empat" value="a"   > 30 dan 20 cm </input>			<input type="radio" name="empat" value="a"   > 30 dan 24 cm </input>
 			<br>5. Lukisan berbentuk persegi panjang berukuran 40 cm x 50 cm dipasang pada bingkai 
 	berbentuk persegi dengan panjang sisi 60 cm!
-	Tentukan luas daerah yang tidak tertutup gambar .... cm2
+	Tentukan luas daerah yang tidak tertutup gambar .... cm<sup>2</sup>
 	<input type="radio" name="lima" value="a"   > 1300 </input>			<input type="radio" name="lima" value="a" > 1500 </input>
 	<input type="radio" name="lima" value="a"   > 1400 </input>			<input type="radio" name="lima" value="a" id="1600"  > 1600 </input>
 			</h4>
@@ -1657,7 +1657,7 @@ function hasil7()
 			<h4>1. Penderita flu burung maupun muntaber yang dirawat di rumah sakit sebanyak 86 orang,
     35 orang menderita flu burung, dan 15 orang menderita flu burung juga muntaber.
     Banyak penderita yang hanya menderita muntaber adalah . . .
-	<input type="radio" name="satu" id="5b(a + 2)"  >  20 orang       </input> <input type="radio" name="satu">  50 orang </input>
+	<input type="radio" name="satu"   >  20 orang       </input> <input type="radio" name="satu">  50 orang </input>
 	<input type="radio" name="satu" value="b"  >  36 orang       </input> <input type="radio" name="satu" id="51 orang">  51 orang </input>
 			
 			<br>2. Dalam sebuah kelas terdapat 20 siswa gemar kimia, 15 siswa gemar fisika, 8 siswa gemar
