--- a/scrollspy.html
+++ b/scrollspy.html
@@ -32,7 +32,7 @@
 		<div class="back-shadow">
 		<form action="" method="get">
 			<div id="bla">
-				<p>Jika diamter suatu lingkarang 14 m dan &pi; = 22/7, maka keliling lingkaran adalah...
+				<p>Jika diamter suatu lingkarang 14 m dan &pi; = 22/7, maka keliling lingkaran adalah...</p>
 				<p><input type="radio" name="jawab1" value="a" /> 14 m</p>
 				<p><input type="radio" name="jawab1" value="b" /> 21 m</p>
 				<p><input type="radio" name="jawab1" value="c" id="j1"/> 44 m</p>
@@ -62,7 +62,7 @@
 		<div class="back-shadow">
 		<form action="" method="get">
 			<div id="bla">
-				<p>tentukan luas segitiga ABC dik, a=4cm, c=5cm dimana C merupakan sisi miring = ... cm<sup>2</sup>
+				<p>tentukan luas segitiga ABC dik, a=4cm, c=5cm dimana C merupakan sisi miring = ... cm<sup>2</sup></p>
 				<p><input type="radio" name="jawab4" value="a" /> 5 m</p>
 				<p><input type="radio" name="jawab4" value="b" id="j4"/> 6 m</p>
 				<p><input type="radio" name="jawab4" value="c" /> 7 m</p>
@@ -73,7 +73,7 @@
 				<p><input type="radio" name="jawab5" value="a" /> 1/13</p>
 				<p><input type="radio" name="jawab5" value="b" id="j5"/> 1/12</p>
 				<p><input type="radio" name="jawab5" value="c" /> 1</p>
-				<p><input type="radio" name="jawab5" value="d" /> 1/2</sup></p>
+				<p><input type="radio" name="jawab5" value="d" /> 1/2</p>
 			</div>
 			<div id="bla">
 				<p>Lukisan berbentuk persegi panjang berukuran 40 cm x 50 cm dipasang pada bingkai berbentuk persegi dengan panjang sisi 60 cm!	Tentukan luas daerah yang tidak tertutup gambar .... cm<sup>2</sup></p>
@@ -82,6 +82,35 @@
 					<p><input type="radio" name="jawab6" value="b" /> 1400 cm<sup>2</sup></p>
 					<p><input type="radio" name="jawab6" value="c" /> 1500 cm<sup>2</sup></p>
 					<p><input type="radio" name="jawab6" value="d" id="j6"/> 1600 cm<sup>2</sup></p>
+				</div>
+			</div>
+		</form>
+		</div>
+		
+		<h2>Bagian Ketiga</h2>
+		<div class="back-shadow">
+		<form action="" method="get">
+			<div id="bla">
+				<p>Jarak antara Samarinda dan Sangkulirang dalam suatu peta adalah 6 cm. Jarak sebenarnya kedua kota itu adalah 180 km. Tentukan skala peta tersebut. = ...</p>
+				<p><input type="radio" name="jawab7" value="a" /> 1:5.000.000</p>
+				<p><input type="radio" name="jawab7" value="b" /> 1:4.000.000</p>
+				<p><input type="radio" name="jawab7" value="c" id="j7"/> 1:3.000.000</p>
+				<p><input type="radio" name="jawab7" value="d" /> 1:2.000.000</p>
+			</div>
+			<div id="bla">
+				<p>Perbadingan umur ayah dan Andi adalah 5:2. Jika jumlah umur mereka adalah 56 tahun,berapakah umur mereka masing-masing ?</p>
+				<p><input type="radio" name="jawab8" value="a" id="j8"/> 40 dan 16 tahun</p>
+				<p><input type="radio" name="jawab8" value="b" /> 40 dan 16 tahun</p>
+				<p><input type="radio" name="jawab8" value="c" /> 38 dan 18 tahun</p>
+				<p><input type="radio" name="jawab8" value="d" /> 42 dan 14 tahun</p>
+			</div>
+			<div id="bla">
+				<p>Faktorkan bentuk kuadrat dari 5x2 + 3x − 2 .....</p>
+				<div class="inli">
+					<p><input type="radio" name="jawab9" value="a" /> (x + 1)(5x + 2)</p>
+					<p><input type="radio" name="jawab9" value="b" /> (x - 1)(5x − 2)</p>
+					<p><input type="radio" name="jawab9" value="c" id="j9"/> (x - 1)(5x + 2)</p>
+					<p><input type="radio" name="jawab9" value="d" /> (x + 1)(5x − 2)</p>
 				</div>
 			</div>
 		</form>
