--- a/scrollspy.html
+++ b/scrollspy.html
@@ -116,7 +116,36 @@
 		</form>
 		</div>
 		
-		
+		<h2>Bagian Keempat</h2>
+		<div class="back-shadow">
+		<form action="" method="get">
+			<div id="bla">
+				<p>Penderita flu burung maupun muntaber yang dirawat di rumah sakit sebanyak 86 orang,
+    35 orang menderita flu burung, dan 15 orang menderita flu burung juga muntaber.
+    Banyak penderita yang hanya menderita muntaber adalah . . .</p>
+				<p><input type="radio" name="jawab10" value="a" /> 20 orang</p>
+				<p><input type="radio" name="jawab10" value="b" /> 36 orang</p>
+				<p><input type="radio" name="jawab10" value="c" /> 50 orang</p>
+				<p><input type="radio" name="jawab10" value="d" id="j10"/> 51 orang</p>
+			</div>
+			<div id="bla">
+				<p>Besar setiap sudut segi-20 beraturan adalah .... (UN '02)</p>
+				<p><input type="radio" name="jawab11" value="a" id="j11"/> 18<sup>o</sup></p>
+				<p><input type="radio" name="jawab11" value="b" /> 20<sup>o</sup></p>
+				<p><input type="radio" name="jawab11" value="c" /> 38<sup>o</sup></p>
+				<p><input type="radio" name="jawab11" value="d" /> 81<sup>o</sup></p>
+			</div>
+			<div id="bla">
+				<p>Titik potong garis 3y - 2x + 13 = 0  dan x + 2y = -4 adalah…	</p>
+				<div class="inli">
+					<p><input type="radio" name="jawab12" value="a" id="j12"/> 2,-3</p>
+					<p><input type="radio" name="jawab12" value="b" /> -3,2)</p>
+					<p><input type="radio" name="jawab12" value="c" /> 2,3</p>
+					<p><input type="radio" name="jawab12" value="d" /> 3,2</p>
+				</div>
+			</div>
+		</form>
+		</div>
 
 </article>
       </div><!--/row-->
