--- a/scrollspy.html
+++ b/scrollspy.html
@@ -139,9 +139,39 @@
 				<p>Titik potong garis 3y - 2x + 13 = 0  dan x + 2y = -4 adalah…	</p>
 				<div class="inli">
 					<p><input type="radio" name="jawab12" value="a" id="j12"/> 2,-3</p>
-					<p><input type="radio" name="jawab12" value="b" /> -3,2)</p>
+					<p><input type="radio" name="jawab12" value="b" /> -3,2</p>
 					<p><input type="radio" name="jawab12" value="c" /> 2,3</p>
 					<p><input type="radio" name="jawab12" value="d" /> 3,2</p>
+				</div>
+			</div>
+		</form>
+		</div>
+		
+		<h2>Bagian Kelima</h2>
+		<div class="back-shadow">
+		<form action="" method="get">
+			<div id="bla">
+				<p>Perhatikan Gambar dibawah :  </p>
+				<img src="img/datar5.jpg">tentukan panjang QS ... ?
+				<p><input type="radio" name="jawab13" value="a" id="j13"/> 4,5 cm</p>
+				<p><input type="radio" name="jawab13" value="b" /> 5   cm</p>
+				<p><input type="radio" name="jawab13" value="c" /> 7   cm</p>
+				<p><input type="radio" name="jawab13" value="d" /> 7,5 cm</p>
+			</div>
+			<div id="bla">
+				<p>Diberikan sebuah tabung tertutup yang memiliki jari-jari sebesar 20 cm dan tinggi 40 cm seperti gambar berikut.</p>
+				<p><input type="radio" name="jawab14" value="a" id="j14"/> 50.240 cm<sup>3</sup></p>
+				<p><input type="radio" name="jawab14" value="b" /> 40.240 cm<sup>3</sup></p>
+				<p><input type="radio" name="jawab14" value="c" /> 30.240 cm<sup>3</sup></p>
+				<p><input type="radio" name="jawab14" value="d" /> 20.240 cm<sup>3</sup></p>
+			</div>
+			<div id="bla">
+				<p>Hitunglah jumlah semua bilangan asli kelipatan 3 kurang dari 100 ....</p>
+				<div class="inli">
+					<p><input type="radio" name="jawab15" value="a" id="j15"/> 1683</p>
+					<p><input type="radio" name="jawab15" value="b" /> 1700</p>
+					<p><input type="radio" name="jawab15" value="c" /> 1900</p>
+					<p><input type="radio" name="jawab15" value="d" /> 1653</p>
 				</div>
 			</div>
 		</form>
