tambahan pada spy

--- a/scrollspy.html
+++ b/scrollspy.html
@@ -321,11 +321,53 @@ function bagian5()
 			</div>
 		</form>
 		</div>
+		<h2>Home</h2>
+		<div class="back-shadow">
+		<form>
+		<div id="bla">
+			<div class="inli">
+				<hr class="featurette-divider garis">
+				<div align="center">
+					<a href="index.html" type="button" class="btn btn-lg btn-primary"><< Kembali Ke Halaman Awal >></a>
+				</div>
+				<hr class="featurette-divider garis">
+		  <!-- /END THE FEATURETTES -->
+		  <div class="container" id="latar">
+		  <div class="row">
+			<div class="col-md-12">
+					<div id="disqus_thread"></div>
+						<div id="disqus_thread"></div>
+						<script type="text/javascript">
+							  /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+							  var disqus_shortname = 'bisakomputer'; // required: replace example with your forum shortname
+					 
+							  /* * * DON'T EDIT BELOW THIS LINE * * */
+							  (function() {
+							  var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+							  dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+							  (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+							  })();
+							</script>
+						  <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+			</div>
+		 </div>
+		 </div>
+    <hr class="featurette-divider garis">
+	<!-- FOOTER -->
+	  <footer class="footer">
+		<div class="container">
+		<p>
+        &copy; Copyright 2013, AMATIR
+		</p>
+		</div>
+	</footer>
+			</div>
+			</div></form>
+		</div>
 
-</article>
       </div><!--/row-->
 	</div>
-
+</article>
 	<script src="js/jquery.js"type="text/javascript"></script>
 	<script src="js/bootstrap.min.js" type="text/javascript"></script>
 	<script src="js/holder.js" type="text/javascript"></script>
