--- a/scrollspy.html
+++ b/scrollspy.html
@@ -164,7 +164,7 @@ function bagian5()
 				<p><input type="radio" name="jawab2" value="c" id="j2" /> 64  cm<sup>2</sup></p>
 				<p><input type="radio" name="jawab2" value="d" /> 128 cm<sup>2</sup></p>
 			</div>
-			<div id="bla">
+			<div id="bla">w
 				<p>Pada gambar di bawah, tentukan panjang DB ... ?</p>
 				<img src="img/datar1.jpg"> 
 				<div class="inli">
